<resources>
    <string name="app_name">BonfireRecipes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">\@string/username</string>
    <string name="password">\@string/password</string>
    <string name="confirm_password">\@string/confirm_password</string>
    <string name="signin">\@string/signin</string>
    <string name="alreadyregistered">\@string/alreadyregistered</string>
    <string name="Register">\@string/Register</string>
    <string name="not_registered">\@string/not_registered</string>
</resources>
